--- a/kissy-api/test/test.html
+++ b/kissy-api/test/test.html
@@ -18,7 +18,7 @@
 <body>
 <img id="testImg" src="s8160652.jpg">
 
-<div style="position: absolute; left:100px;top:100px;width: 500px;height: 300px;border: 1px solid red;overflow: hidden;">
+<div style="display:none;;position: absolute; left:100px;top:100px;width: 500px;height: 300px;border: 1px solid red;overflow: hidden;">
     <img src="img.png" style="position: absolute;left: 0px;top:0px;">
 </div>
 </body>
