--- a/jquery-api/test/test.html
+++ b/jquery-api/test/test.html
@@ -19,6 +19,6 @@
 
 <div id="result" style="height:100px;"></div>
 
-<div id="render" data-model="city" data-result="#result"></div>
+<div id="render" data-model="multiselect" data-result="#result"></div>
 </body>
 </html>
