--- a/jquery-api/test/test.html
+++ b/jquery-api/test/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="../src/jquery-1.11.3.min.js"></script>
-    <script src="../models/city.js"></script>
+    <script src="../models/multiselect.js"></script>
     <style>
         html, body {
             width: 100%;
