--- a/jquery-api/test/test.html
+++ b/jquery-api/test/test.html
@@ -24,172 +24,43 @@
 
 <script>
     var ddd = [
+
         {
-            "id": "beijing0",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj0",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing1",
-            "name": "北京",
+            "id": "ces11",
+            "name": "测试1",
             "children": [
                 {
                     "id": "bj1",
-                    "name": "北京"
+                    "name": "测试——1"
                 },
                 {
                     "id": "bj11",
-                    "name": "北京1"
+                    "name": "测试——2"
                 },
                 {
                     "id": "bj21",
-                    "name": "北京2"
+                    "name": "测试——3"
                 }
             ]
         },
         {
-            "id": "beijing2",
-            "name": "北京",
+            "id": "ces2",
+            "name": "测试2",
             "children": [
                 {
                     "id": "bj2",
-                    "name": "北京"
+                    "name": "测试——4"
                 }
             ]
         },
         {
-            "id": "beijing3",
-            "name": "北京",
+            "id": "测试3",
+            "name": "测试3",
             "children": [
                 {
                     "id": "bj3",
-                    "name": "北京",
+                    "name": "测试",
                     "checked": true
-                }
-            ]
-        },
-        {
-            "id": "beijing4",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj4",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing5",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj5",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing6",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj6",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing7",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj7",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing8",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj8",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing9",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj9",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing10",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj10",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing11",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj11",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing12",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj12",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing13",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj13",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing14",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj14",
-                    "name": "北京"
-                }
-            ]
-        },
-        {
-            "id": "beijing15",
-            "name": "北京",
-            "children": [
-                {
-                    "id": "bj15",
-                    "name": "北京"
                 }
             ]
         }
