--- a/model/test/test.html
+++ b/model/test/test.html
@@ -12,15 +12,13 @@
     <script src="../src/mvc.js"></script>
 
     <script>
-
-
         require(["mvc"],function(MVC){
-            MVC.config({
+            MVC.config([{
                 modelType : "Student",
                 renderData : [{id: 1, name: "zs"}, {id: 2, name: "zs2"}],
                 view : "#tpl",
                 render : "body"
-            });
+            }]);
         })
     </script>
     <script type="text/template" id="tpl">
