--- a/mobile/test/test.html
+++ b/mobile/test/test.html
@@ -6,220 +6,19 @@
 
 </head>
 <body>
-<div class="header">
-    <a href="#home" >返回</a>
+<div class="page">
+    <div data-role="header">
+        <a href="#home" data-role="back">回退</a>
+    </div>
+    <div data-role="content">
+        <p>Content goes here</p>
+    </div>
+    <div data-role="footer" data-position="fixed">
+        <div class="footer-button"><a href="test.html" data-role="none">首页</a></div>
+        <div class="footer-button"><a href="test.html" data-role="none">购物车</a></div>
+        <div class="footer-button"><a href="test.html" data-role="none">我的蔚蓝</a></div>
+    </div>
 </div>
-
-test
-<br/>
-test
-<br/>test
-<br/>test
-<br/>test
-<br/>
-test
-<br/>
-test
-<br/>
-test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>
-est
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>testest
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>testest
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>testest
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>testest
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>testest
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
-<br/>test
 
 
 
