--- a/mobile/test/home.html
+++ b/mobile/test/home.html
@@ -4,49 +4,16 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../src/css/jquery.mobile-1.4.5.css"/>
+    <link rel="stylesheet" href="../src/css/base.css"/>
+    <link rel="stylesheet" href="../src/css/home.css"/>
+
     <script src="../src/js/base/require.js"></script>
     <script src="../src/js/base/config.js"></script>
-    <style>
-        .ui-loader-default {
-            display: block;
-        }
-
-        .footer-button {
-            display: inline-block;
-            float: left;
-            width: 33%;
-            text-align: center;
-        }
-    </style>
-
-    <style>
-        .footer-button {
-            border: none;
-        }
-
-        .footer-button:active {
-            background: none;
-        }
-
-        .wl-scan-code {
-            left: 0;
-        }
-
-        .wl-search {
-            margin-left: 10%;
-            width: 100%;
-            left: 0;
-            text-align: center;;
-        }
-
-        .wl-msg {
-            position: absolute;
-            right: 0;
-        }
 
 
-    </style>
-
+    <script>
+        require([""],function(){})
+    </script>
 </head>
 <body>
 <div data-role="page" id="home">
