--- a/mobile/test/home.html
+++ b/mobile/test/home.html
@@ -11,8 +11,12 @@
     <script src="../src/js/base/config.js"></script>
 
 
+
     <script>
-        require([""],function(){})
+        var myScroll;
+
+        require(["jquery"], function ($) {
+        })
     </script>
 </head>
 <body>
