--- a/bts/app/test.html
+++ b/bts/app/test.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
 <html lang="zh-CN">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link href="../resources/css/base/bootstrap.min.css" rel="stylesheet">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<link href="../resources/css/base/bootstrap.min.css" rel="stylesheet">
 
-    <script src="../resources/js/base/jquery.min.js"></script>
-    <script src="../resources/js/base/bootstrap.min.js"></script>
-    <title></title>
+<link rel="stylesheet/less" href="../resources/css/app/common.less">
+
+<script src="../resources/js/base/jquery.min.js"></script>
+<script src="../resources/js/base/bootstrap.min.js"></script>
+<script src="../resources/js/base/less.min.js"></script>
+<title></title>
 
 </head>
 <body>
-    <div class="container">
+<div class="container">
     <div class="panel panel-primary">
         <div class="panel-heading">
             Panel heading
-            <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-cog panel-header-icon" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-minus panel-header-icon" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-plus panel-header-icon" aria-hidden="true"></span>
         </div>
         <div class="panel-body">
-           s
+            s
         </div>
-        <div class="panel-footer">more</div>
+        <div class="panel-footer panel-footer-align">查看更多</div>
     </div>
-    </div>
+</div>
 </body>
 
 <script>
