--- a/bts/app/test.html
+++ b/bts/app/test.html
@@ -23,7 +23,7 @@
             <span class="glyphicon glyphicon-plus panel-header-icon" aria-hidden="true"></span>
         </div>
         <div class="panel-body">
-            s
+            body
         </div>
         <div class="panel-footer panel-footer-align">查看更多</div>
     </div>
