--- a/bts/app/test.html
+++ b/bts/app/test.html
@@ -12,27 +12,56 @@
 <script src="../resources/js/base/less.min.js"></script>
 <title></title>
 
+<style>
+</style>
+
 </head>
-<body>
-<div class="container">
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            Panel heading
-            <span class="glyphicon glyphicon-cog panel-header-icon" aria-hidden="true"></span>
-            <span class="glyphicon glyphicon-minus panel-header-icon" aria-hidden="true"></span>
-            <span class="glyphicon glyphicon-plus panel-header-icon" aria-hidden="true"></span>
+
+<body class="container-fluid">
+<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+<div class="row">
+    <div class="col-xs-6 col-md-8">.col-xs-12 .col-md-8</div>
+    <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+<div class="row">
+    <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+    <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+    <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+</div>
+
+<!-- Columns are always 50% wide, on mobile and desktop -->
+<div class="row">
+    <div class="col-xs-6">.col-xs-6</div>
+    <div class="col-xs-6">.col-xs-6</div>
+</div>
+<div class="alert alert-success" role="alert">...</div>
+<div class="alert alert-info" role="alert">...</div>
+<div class="alert alert-warning" role="alert">...</div>
+<div class="alert alert-danger" role="alert">...</div>
+<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="panel"  tabindex="0">
+        <div class="panel-heading" role="tab" id="headingOne"   data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <h4 class="panel-title">
+                Collapsible Group Item #1
+            </h4>
         </div>
-        <div class="panel-body">
-            body
+        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel">
+            <ul class="list-group">
+                <li class="list-group-item">Cras justo odio</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Morbi leo risus</li>
+                <li class="list-group-item">Porta ac consectetur ac</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+            </ul>
         </div>
-        <div class="panel-footer panel-footer-align">查看更多</div>
     </div>
 </div>
+
+
+
 </body>
 
-<script>
-    $(function () {
-        $('[data-toggle="popover"]').popover()
-    })
-</script>
+
 </html>
