--- a/bts/app/test.html
+++ b/bts/app/test.html
@@ -4,17 +4,14 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <link href="../resources/css/base/bootstrap.min.css" rel="stylesheet">
-
-<link rel="stylesheet/less" href="../resources/css/app/common.less">
-
 <script src="../resources/js/base/jquery.min.js"></script>
 <script src="../resources/js/base/bootstrap.min.js"></script>
-<script src="../resources/js/base/less.min.js"></script>
+<script src="../resources/js/base/angular-1.3.9.min.js"></script>
 <title></title>
-
-<style>
-</style>
-
+<script>
+    var reg = /^177[0-9]{8}$/;
+    console.log(reg.test("17712345678"));
+</script>
 </head>
 
 <body class="container-fluid">
